docs: revise master plan v2.0 - new Tet dates, expanded Sprint 2, remove Deals from Phase 1

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -20,9 +20,11 @@
     <div class="pt-6 pb-2 px-4 text-xs font-bold text-blue-300 uppercase tracking-wider">Kinh doanh</div>
 
     <%= sidebar_link "Khách hàng", "#", "fa-users" %>
-    <%= sidebar_link "Cơ hội bán hàng", "#", "fa-hand-holding-dollar" %>
-    <%= sidebar_link "Sản phẩm", "#", "fa-box-open" %>
-    <%= sidebar_link "Khuyến mãi", "#", "fa-ticket" %>
+
+    <%# === PHASE 2: Uncomment khi triển khai Phase 2 === %>
+    <%# <%= sidebar_link "Cơ hội bán hàng", "#", "fa-hand-holding-dollar" %> %>
+    <%# <%= sidebar_link "Sản phẩm", "#", "fa-box-open" %> %>
+    <%# <%= sidebar_link "Khuyến mãi", "#", "fa-ticket" %> %>
 
     <%# Tổ chức section %>
     <div class="pt-6 pb-2 px-4 text-xs font-bold text-blue-300 uppercase tracking-wider">Tổ chức</div>
