fix: repair JS config, fix sign out flow, hide breadcrumbs, and add password toggle in users form

--- a/app/views/roles/index.html.erb
+++ b/app/views/roles/index.html.erb
@@ -1,14 +1,7 @@
 <%# TASK-016: Roles list page based on wireframe roles.html %>
 <% content_for :title, "Quản lý Phân quyền" %>
 
-<%# Header & Breadcrumbs %>
-<header class="h-16 bg-white border-b border-gray-200 flex items-center justify-between -mx-6 px-6 mb-6">
-  <nav class="flex items-center text-sm">
-    <span class="text-gray-500">Tổ chức</span>
-    <i class="fa-solid fa-chevron-right text-gray-300 text-xs mx-2"></i>
-    <span class="text-gray-800 font-medium">Phân quyền</span>
-  </nav>
-</header>
+<% content_for :title, "Quản lý Vai trò" %>
 
 <%# Page Title & Action %>
 <div class="flex items-center justify-between mb-6">
