--- a/app/views/roles/edit.html.erb
+++ b/app/views/roles/edit.html.erb
@@ -1,16 +1,7 @@
 <%# TASK-016: Edit role form %>
 <% content_for :title, "Sửa Vai trò - #{@role.name}" %>
 
-<%# Header & Breadcrumbs %>
-<header class="h-16 bg-white border-b border-gray-200 flex items-center justify-between -mx-6 px-6 mb-8">
-  <nav class="flex items-center text-sm">
-    <span class="text-gray-500">Tổ chức</span>
-    <i class="fa-solid fa-chevron-right text-gray-300 text-xs mx-2"></i>
-    <%= link_to "Phân quyền", roles_path, class: "text-gray-500 hover:text-[#0B387A]" %>
-    <i class="fa-solid fa-chevron-right text-gray-300 text-xs mx-2"></i>
-    <span class="text-gray-800 font-medium">Sửa: <%= @role.name %></span>
-  </nav>
-</header>
+<% content_for :title, "Sửa vai trò - #{@role.name}" %>
 
 <div class="flex items-center justify-between mb-8">
   <h1 class="text-2xl font-bold text-gray-900">Sửa Vai trò</h1>
