--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -41,7 +41,7 @@
         <%= image_tag "https://ui-avatars.com/api/?name=#{current_user.email.first}&background=random", class: "h-8 w-8 rounded-full border-2 border-blue-300", alt: "Avatar" %>
         <div class="ml-3">
           <p class="text-sm font-medium text-white"><%= current_user.email.split('@').first %></p>
-          <%= link_to "Đăng xuất", destroy_user_session_path, data: { turbo_method: :delete }, class: "text-xs text-blue-300 hover:text-white hover:underline" %>
+          <%= link_to "Đăng xuất", destroy_user_session_path, class: "text-xs text-blue-300 hover:text-white hover:underline" %>
         </div>
       <% else %>
         <i class="fa-solid fa-user w-6 text-blue-300"></i>
