--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,13 +1,6 @@
 <% content_for :title, "Quản lý Nhân viên" %>
 
-<%# Header & Breadcrumbs %>
-<header class="h-16 bg-white border-b border-gray-200 flex items-center justify-between -mx-6 px-6 mb-6">
-  <nav class="flex items-center text-sm">
-    <span class="text-gray-500">Tổ chức</span>
-    <i class="fa-solid fa-chevron-right text-gray-300 text-xs mx-2"></i>
-    <span class="text-gray-800 font-medium">Nhân viên</span>
-  </nav>
-</header>
+<% content_for :title, "Quản lý Nhân viên" %>
 
 <div class="flex items-center justify-between mb-6">
   <div>
