--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -28,7 +28,7 @@
         <tr class="hover:bg-gray-50 transition-colors">
           <td class="px-6 py-4 whitespace-nowrap">
             <div class="flex items-center">
-              <img class="h-10 w-10 rounded-full object-cover border border-gray-200" src="https://ui-avatars.com/api/?name=<%= user.name %>&background=random" alt="">
+              <img class="h-10 w-10 rounded-full object-cover border border-gray-200" src="https://ui-avatars.com/api/?name=<%= user.name %>&background=random" alt="<%= user.name %>">
               <div class="ml-4">
                 <div class="text-sm font-bold text-gray-900"><%= user.name %></div>
                 <div class="text-sm text-gray-500"><%= user.email %></div>
