--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -87,7 +87,7 @@
               <% @contacts.each do |contact| %>
                 <tr class="hover:bg-gray-50 transition-colors" id="<%= dom_id(contact) %>">
                   <td class="px-6 py-4 whitespace-nowrap">
-                    <%= link_to contact, class: "text-sm font-medium text-brand-blue hover:underline" do %>
+                    <%= link_to contact, class: "text-sm font-medium text-brand-blue hover:underline", data: { turbo_frame: "_top" } do %>
                       <%= contact.code %>
                     <% end %>
                   </td>
@@ -143,13 +143,13 @@
                       <% end %>
                       
                       <%# View button %>
-                      <%= link_to contact, class: "text-gray-600 hover:text-gray-900 transition-colors", title: "Xem chi tiết" do %>
+                      <%= link_to contact, class: "text-gray-600 hover:text-gray-900 transition-colors", title: "Xem chi tiết", data: { turbo_frame: "_top" } do %>
                         <i class="fa-solid fa-eye"></i>
                       <% end %>
                       
                       <%# Edit button %>
                       <% if can?(:edit, contact) %>
-                        <%= link_to edit_contact_path(contact), class: "text-brand-blue hover:text-blue-900 transition-colors", title: "Sửa" do %>
+                        <%= link_to edit_contact_path(contact), class: "text-brand-blue hover:text-blue-900 transition-colors", title: "Sửa", data: { turbo_frame: "_top" } do %>
                           <i class="fa-solid fa-pen-to-square"></i>
                         <% end %>
                       <% end %>
