--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,18 +1,10 @@
 <%# TASK-019: New Contact %>
 <% content_for :page_title, "Thêm khách hàng mới" %>
 
-<div class="max-w-3xl mx-auto">
+<div class="max-w-none w-full">
   <%# Header %>
-  <div class="mb-6">
-    <nav class="flex items-center gap-2 text-sm text-gray-500 mb-4">
-      <%= link_to contacts_path, class: "hover:text-brand-blue" do %>
-        <i class="fa-solid fa-address-book mr-1"></i>Khách hàng
-      <% end %>
-      <i class="fa-solid fa-chevron-right text-xs"></i>
-      <span class="text-gray-900">Thêm mới</span>
-    </nav>
+  <div class="flex items-center justify-between mb-8">
     <h1 class="text-2xl font-bold text-gray-900">Thêm khách hàng mới</h1>
-    <p class="text-sm text-gray-500 mt-1">Tạo thông tin khách hàng mới vào hệ thống</p>
   </div>
 
   <%# Form Card %>
