--- a/app/views/contacts/recent.turbo_stream.erb
+++ b/app/views/contacts/recent.turbo_stream.erb
@@ -6,7 +6,7 @@
         <span class="text-xs text-gray-400">10 contact mới nhất</span>
     </div>
     
-    <div class="flex-1 overflow-y-auto p-0 relative bg-gray-50/30">
+    <div class="max-h-[600px] overflow-y-auto p-0 relative bg-gray-50/30">
         <div id="recent_contacts_list" class="divide-y divide-gray-100">
           <%= render partial: "dashboard/recent_contact", collection: @recent_contacts, as: :contact %>
         </div>
