--- a/app/views/dashboard/_call_center_dashboard.html.erb
+++ b/app/views/dashboard/_call_center_dashboard.html.erb
@@ -11,9 +11,7 @@
       <div class="col-span-12 md:col-span-8 flex flex-col h-full">
         <div class="bg-white rounded-xl shadow-sm border border-gray-200 flex-1 overflow-hidden flex flex-col">
           <div class="p-6 flex-1 overflow-y-auto">
-            <%= turbo_frame_tag "new_contact_form", class: "h-full w-full block" do %>
-              <%= render "contacts/form_call_center", contact: @contact %>
-            <% end %>
+            <%= render "contacts/form_call_center", contact: @contact %>
           </div>
         </div>
       </div>
@@ -28,7 +26,7 @@
                <span class="text-xs text-gray-400">10 contact mới nhất</span>
             </div>
             
-            <div class="flex-1 overflow-y-auto p-0 relative bg-gray-50/30">
+            <div class="max-h-[600px] overflow-y-auto p-0 relative bg-gray-50/30">
                <div id="recent_contacts_list" class="divide-y divide-gray-100">
                  <%= render partial: "dashboard/recent_contact", collection: @recent_contacts, as: :contact %>
                </div>
